environments/project-gke/gateway.yaml
# gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: project-gateway
  namespace: project
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: project
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same  # Routes in same namespace only
