environments/project-gke/todo-app-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: todo-app-route
  namespace: project  
spec:
  parentRefs:
  - name: project-gateway
  rules:

  # / route
  # -------
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: todo-app-svc
      port: 1234
